[package]
name = "seckoo"
version = "0.0.0-alpha0.1"
edition = "2021"
license = "MIT"
description = "A concurrent Cuckoo Hash Table"
homepage = "https://docs.rs/seckoo"
documentation = "https://docs.rs/seckoo"
repository = "https://github.com/emilHof/seckoo"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.14"

[dev-dependencies]
rand = "0.8.5"
