[package]
name = "seckoo"
version = "0.0.0-alpha1.0"
edition = "2021"
license = "MIT"
description = "A concurrent Cuckoo Hash Table"
homepage = "https://docs.rs/seckoo"
documentation = "https://docs.rs/seckoo"
repository = "https://github.com/emilHof/seckoo"
readme = "./README.md"
authors = ["Emil Hofstetter <emil.k.hofstetter@gmail.com>"]

[dependencies]
crossbeam-epoch = "0.9.14"

[dev-dependencies]
rand = "0.8.5"
